# cpp_tvm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: receipt_nn.h  receipt_nn.hpp  tvm.utils.hpp  tvm_runner.hpp  tvm_utils.hpp
model/: mod.json  mod.params
src/: main.cpp  main_img.cpp  receipt_nn.cpp  tvm_runner.cpp  tvm_utils.cpp
